--- a/my test.html
+++ b/my test.html
@@ -16,7 +16,7 @@
   <h1>遊戲網站</h1>
 <a href="https://www.nkust.edu.tw"> my school</a><br/>
 <h2>fighting web</h2>
-<a href="https://www.nkust.edu.tw" target="Mblank"> my school</a><br/>
+<a href="https://www.nkust.edu.tw" target="_blank"> my school</a><br/>
 <h2>terrible web</h2>
 <a href="mailto:c109130105@NKUST.EDU.TW">email to me</a><br/>
 
