--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <html>
-  <head></head>
+  <head>
+    <style>
+    .lecture {
+      font-size:3em;
+    }
+    </style>
+  </head>
   <body>
-    <h1> <a href="./my test.html">to my favorite</a></h1>
-   
+    
+    <img src="img/pic1.jpg">
+    <br/>
+    <div class="lecture">
+    <ul>
+      <li><a href="week6.html">wek 6 work</a></li>
+      <li><a href="week7.html">wek 7 work</a></li>
+    </ul>
+    <a href="index.html">my self</a>
+   </div>
     </body>
 
   
