--- a/week6.html
+++ b/week6.html
@@ -1,4 +1,5 @@
-
+<html>
+  <head>
 <style>
   p.title {
     text-align: center;
@@ -32,7 +33,9 @@
     float:left;
   }
 </style>
-
+</head>
+<body>
+  <a href="index.html">home page</a><br/>
 <div class="top">
  <p class="title">三國演義全文</p>
 
@@ -53,4 +56,5 @@
 
 <p>建寧二年四月望日，帝御溫德殿。方陞座，殿角狂風驟起，只見一條大青蛇，從梁上飛將下來，蟠於椅上。帝驚倒，左右急救入宮，百官俱奔避。須臾，蛇不見了。忽然大雷大雨，加以冰雹，落到半夜方止，壞卻房屋無數。建寧四年二月，洛陽地震；又海水泛溢，沿海居民，盡被大浪捲入海中。光和元年，雌雞化雄。六月朔，黑氣十餘丈，飛入溫德殿中。秋七月，有虹見於玉堂；五原山岸，盡皆崩裂。種種不祥，非止一端。</p>
 </div>
-</div>
+</div></body>
+</html>
