--- a/week6.html
+++ b/week6.html
@@ -1,38 +1,6 @@
 <html>
   <head>
-<style>
-  p.title {
-    text-align: center;
-    color: green;
-    font-size: 2em;
-    font-weight: bold;
-  }
-  p.abstract{
-    text-align: center;
-    color: red;
-    font-style: italic;
-    padding-top:10px;
-    padding-bottom:10px;
-    padding-right:80px;
-    padding-left:80px;
-  }
-
-  div.top{
-    height:30%;
-  }
-  div.bottom{
-    height:70%;
-    width:100%;
-  }
-  div.left{
-    width:20%;
-    float:left;
-  }
-  div.right{
-    width:60%;
-    float:left;
-  }
-</style>
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
 <body>
   <a href="index.html">home page</a><br/>
