--- a/week7.html
+++ b/week7.html
@@ -2,27 +2,7 @@
     <head>
         <title>Divs in HTML with style</title>
         <meta charset="utf-8" />
-        <style> 
-            .container {
-                width: 100%;
-            }
-            .block {
-                float: left;
-                width: 40%;
-                border: solid red;
-                margin: 1em;
-            }
-            .block_break {
-                clear: left;
-                border: solid green;
-            }
-            #s007{
-              background-color:yellow;
-              border: solid;
-              border-color: blue;
-            }
-           
-        </style>
+      <link rel="stylesheet" type="text/css" href="mystyle.css">
     </head>
     <body>
         <div class="container">
