--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <html>
   <head>
-    <style>
-    .lecture {
-      font-size:3em;
-    }
-    </style>
+ <link rel="stylesheet" type="text/css" href="mystyle.css">
   </head>
   <body>
     
-    <img src="img/pic1.jpg">
+    <img class="center" src="img/pic1.jpg">
     <br/>
     <div class="lecture">
     <ul>
-      <li><a href="week6.html">wek 6 work</a></li>
-      <li><a href="week7.html">wek 7 work</a></li>
+      <li><a href="week6.html">week 6 work</a></li>
+      <li><a href="week7.html">week 7 work</a></li>
+      <li><a href="week71.html">week 71 work</a></li>
+       <li><a href="demo1.html">demo</a></li>
     </ul>
     <a href="index.html">my self</a>
    </div>
