--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="week6.html">week 6 work</a></li>
       <li><a href="week7.html">week 7 work</a></li>
+      <li><a href="week8.html">week 8 work</a></li>
       <li><a href="week71.html">week 71 work</a></li>
        <li><a href="demo1.html">demo</a></li>
     </ul>
