--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <li><a href="week6.html">week 6 work</a></li>
       <li><a href="week7.html">week 7 work</a></li>
       <li><a href="week8.html">week 8 work</a></li>
+      <li><a href="week9.html">week 9 work</a></li>
       <li><a href="week71.html">week 71 work</a></li>
        <li><a href="demo1.html">demo</a></li>
     </ul>
