--- a/app/index.html
+++ b/app/index.html
@@ -38,8 +38,10 @@
     scr.value=""
   }
   function calc(){
-    scr.value = eval( scr.value )
     
+    x2=eval(scr.value)
+    x3=x2.toPrecision(15)
+    scr.value=parseFloat(x3)
   }
 </script>
 </head>
