--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <link rel="stylesheet" type="text/css" href="mystyle.css">
   </head>
   <body>
-    
+    <h1>in class practice</h1>
     <img class="center" src="img/pic1.jpg">
     <br/>
     <div class="lecture">
@@ -15,6 +15,7 @@
       <li><a href="week71.html">week 71 work</a></li>
        <li><a href="demo1.html">demo</a></li>
     </ul>
+    <a href="app/index.html">計算機</a>
     <a href="index.html">my self</a>
    </div>
     </body>
