--- a/week12.html
+++ b/week12.html
@@ -1,5 +1,14 @@
 <html>
-  <head></head>
+  <head>
+    <style>
+      .hit{
+        /*border:solid blue；*/
+        border-color:blue;
+        border-style:solid;
+        border-width:10px;
+      }
+    </style>
+  </head>
   <body>
     <script>
       var counter=0;
